--- a/src/Pages/Login.css
+++ b/src/Pages/Login.css
@@ -12,18 +12,19 @@ body {
     display: flex !important;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    height: 100vh;
+    align-items: center;  
+    height: 70vh;
     max-width: 500px;
     width: 100%;
-    margin: auto; 
+    flex-wrap: nowrap; 
+    
   }
   .container > form {
-    width: 70%;
-    border: 1px solid #dfdfdf;
+    width: 100%;
+    
     padding: 20px;
     border-radius: 5px;
-    background: #fff;
+    background: #7398b8;
   }
   pre {
     width: 70%;
@@ -40,14 +41,29 @@ body {
     margin: 20px 0;
   }
   
-  .ui.form {
-    display: flex;
-    flex-direction: column;
-  }
-  
   .field {
-    margin-bottom: 20px;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.field .ui.form {
+  width: 100%;
+  max-width: 1100px; 
+}
+
+.field .ui.form .field {
+  width: 100%;
+}
+
+.field .ui.form .w-75 {
+  width: 75%;
+}
+
+.field .ui.form .mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
   
   label {
     margin-bottom: 5px;
@@ -58,6 +74,7 @@ body {
     font-size: 16px;
     border-radius: 5px;
     border: 1px solid #ccc;
+    background-color:#7398b8;
   }
   
   button {
@@ -78,3 +95,5 @@ body {
   p {
     color: red;
   }
+  
+  
