--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -1,5 +1,11 @@
 
 
+.min-width {
+  min-width: 100px; 
+  overflow: hidden;
+  text-overflow: ellipsis; 
+  white-space: nowrap;
+}
 
 @media (max-width: 768px) {
     .flex-graph {
