--- a/src/Pages/Login.css
+++ b/src/Pages/Login.css
@@ -18,7 +18,7 @@ body {
     
     padding: 20px;
     border-radius: 5px;
-    background: #b7ccdc;
+    background: #FFFFFF;
   }
   pre {
     width: 70%;
