--- a/src/Pages/InfoCenter.css
+++ b/src/Pages/InfoCenter.css
@@ -1,5 +1,10 @@
 @media (max-width: 768px) {
     input[type="month"] {
-      color: black;
-    }
+        color: white; /* Задайте желаемый цвет текста */
+        background-color: #333; /* Задайте фоновый цвет инпута */
+        border: 1px solid white; /* Задайте стиль рамки */
+        border-radius: 5px; /* Задайте скругление углов */
+        padding: 5px; /* Задайте внутренний отступ */
+        -webkit-appearance: none; /* Уберите стандартные стили Safari */
+      }
   }
