--- a/src/Pages/InfoCenter.css
+++ b/src/Pages/InfoCenter.css
@@ -1,10 +1,6 @@
-@media (max-width: 768px) {
-    input[type="month"] {
-        color: rgb(6, 6, 6); /* Задайте желаемый цвет текста */
-        background-color: #080808; /* Задайте фоновый цвет инпута */
-        border: 1px solid rgb(10, 10, 10); /* Задайте стиль рамки */
-        border-radius: 5px; /* Задайте скругление углов */
-        padding: 5px; /* Задайте внутренний отступ */
-        -webkit-appearance: none; /* Уберите стандартные стили Safari */
-      }
+input[type="date"]::-webkit-calendar-picker-indicator {
+    filter: invert(1); /* Инвертирует цвета */
+    background-color: #333; /* Задает темный фон */
+    color: #fff; /* Задает цвет текста */
   }
+  
