--- a/src/Pages/MainPageMenu.css
+++ b/src/Pages/MainPageMenu.css
@@ -69,7 +69,7 @@
     }
     .menu-nav a {
       text-decoration: none;
-      color: #f3efef;
+      color: #fffffff2;
       text-transform: uppercase;
       font-weight: 100;
       display: block; /* Изменено с inline-block на block */
